@@ -16,24 +16,33 @@
 package org.springframework.oxm;
 
 import java.io.IOException;
-
 import javax.xml.transform.Source;
 
 /**
  * Defines the contract for Object XML Mapping unmarshallers. Implementations of this interface can deserialize a given
  * XML Stream to an Object graph.
- * 
+ *
  * @author Arjen Poutsma
  */
 public interface Unmarshaller {
 
     /**
      * Unmarshals the given provided <code>javax.xml.transform.Source</code> into an object graph.
-     * 
+     *
      * @param source the source to marshal from
      * @return the object graph
-     * @throws XmlMappingException if the given source cannot be mapped to an object 
-     * @throws IOException if an I/O Exception occurs
+     * @throws XmlMappingException if the given source cannot be mapped to an object
+     * @throws IOException         if an I/O Exception occurs
      */
     Object unmarshal(Source source) throws XmlMappingException, IOException;
+
+    /**
+     * Indicates whether this unmarshaller can unmarshal instances of the supplied type.
+     *
+     * @param clazz the class that this unmarshaller is being asked if it can marshal
+     * @return <code>true</code> if this unmarshaller can indeed unmarshal to the supplied class; <code>false</code>
+     *         otherwise
+     */
+    boolean supports(Class clazz);
+
 }
